# pieviz

./: .gitignore  LICENSE  README.md  create_all_paper_pies.py  pievies.py  pyproject.toml  requirements.txt  temp_chart.html  video
data/: geb_analysis.csv
paper/: create_all_paper_pies.py
paper/data/: ink_efficiency.csv  pie_chart_trend.csv
paper/latex/: main.bbl  main.tex
paper/userstudy/: preregistration.md  results.md
src/pievis/: __init__.py  pievis.py
src/pieviz/: __init__.py  pieviz.py
tests/: test_pievis.py  test_pieviz.py
