[build-system]
requires = ["uv_build >= 0.10.0, <0.11.0"]
build-backend = "uv_build"

[project]
name = "pieviz"
version = "0.0.1"
authors = [
  { name="Markus Reiter-Haas", email="iseratho@gmail.com" },
  { name="Kevin Innerebner", email="kevin.innerebner@gmail.com" },
]
description = "A superior 🥧-based visualization library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/Iseratho/pieviz"
Issues = "https://github.com/Iseratho/pieviz/issues"
# Documentation = "https://pieviz.readthedocs.io/"